--- a/src/app/components/bookings/bookings.html
+++ b/src/app/components/bookings/bookings.html
@@ -1,12 +1,6 @@
-<div class="d-flex">
+<div>
 
-   <!-- Sidebar -->
-<div class="col-md-2 text-white p-3 d-none d-md-block text-center" style="min-height: 100vh; border-right: 1px solid rgb(61, 4, 114);">   
-  
-
-  </div>
-
-<div  class="col-md-10 col-12 p-4">
+<div  class="col-md-10 col-12 p-4 w-100">
 
  <div class="d-flex justify-content-between align-items-center mb-3">
      <h3 class="mb-4 ">📅 Bookings List</h3>
