--- a/src/app/components/updateuser/updateuser.html
+++ b/src/app/components/updateuser/updateuser.html
@@ -1,12 +1,6 @@
-<div class="d-flex flex-wrap">
-  <!-- Sidebar -->
-  <div class="col-12 col-md-2 text-white p-3 d-none d-md-block text-center"
-       style="min-height: 100vh; border-right: 1px solid rgb(61, 4, 114);">
-
-  </div>
-
+<div>
   <!-- Main Content -->
-  <div class="col-12 col-md-10 p-4">
+  <div class="col-12 col-md-10 p-4 w-100">
   <h2>Edit User</h2>
   <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
 
