--- a/src/app/components/adduser/adduser.html
+++ b/src/app/components/adduser/adduser.html
@@ -1,11 +1,7 @@
-<div class="d-flex">
-  <!-- Sidebar -->
-  <div class="col-12 col-md-2 text-white p-3 d-none d-md-block text-center"
-       style="min-height: 100vh; border-right: 1px solid rgb(61, 4, 114);">
-  </div>
+<div>
 
   <!-- Main Content -->
-  <div class="col-12 col-md-10 p-4">
+  <div class="col-12 col-md-10 p-4 w-100">
     <div class="row justify-content-between align-items-center mb-3">
       <h3 class="col-md-6">Add New User</h3>
       <div class="col-md-2 text-end">
