--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -1,8 +1,18 @@
 nav.bg-nav {
-  background-color: #C69963 !important;
+  border-bottom: 1px solid #000;
 }
 
-nav.navbar-text {
-  font-size: 1.3rem;
-  color: #C69963 !important;
+/* Header ثابت فوق */
+nav {
+  height: 60px; /* عدّل حسب ارتفاع الهيدر */
+  z-index: 1050;
+}
+
+.light-mode {
+  background-color: #f3f4f6;
+  color: #212529;
+}
+.dark-mode {
+  background-color: #323030;
+  color: #fff;
 }
