--- a/src/app/components/listings-update/listings-update.html
+++ b/src/app/components/listings-update/listings-update.html
@@ -1,11 +1,7 @@
-<div class="d-flex">
-  <!-- Sidebar -->
-  <div class="col-md-2 text-white p-3 d-none d-md-block text-center"
-    style="min-height: 100vh; border-right: 1px solid rgb(61, 4, 114);">
-  </div>
+<div>
 
   <!-- Main Content -->
-  <div class="col-md-10 col-12 p-4">
+  <div class="col-md-10 col-12 p-4 w-100 ">
     <div class="row justify-content-between align-items-center mb-3">
       <h3 class="col-md-8 text-primary">Update Listing</h3>
       <button class="btn btn-primary col-md-2" [routerLink]="['/listings']">Back</button>
