--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -1,16 +1,19 @@
-
-
-
-<app-navbar></app-navbar>
+<!-- Header -->
+<app-header></app-header>
 
 <div class="container-fluid">
-  
   <div class="row">
+    <!-- Sidebar -->
+    <div class="col-md-3 col-lg-2 p-0 text-white min-vh-100">
+      <app-navbar></app-navbar>
+    </div>
+
+    <!-- Main Content -->
+    <main class="col-md-9 col-lg-10 ms-sm-auto px-4 py-4">
       <router-outlet></router-outlet>
-      
+    </main>
   </div>
 </div>
 
+<!-- Footer -->
 <app-footer></app-footer>
-
-
