--- a/src/app/components/product-cards/product-cards.html
+++ b/src/app/components/product-cards/product-cards.html
@@ -1,12 +1,7 @@
-<div class="d-flex">
-  <!-- Sidebar -->
-  <div class="col-md-2 text-white p-3 d-none d-md-block text-center" 
-       style="min-height: 100vh; border-right: 1px solid rgb(61, 4, 114);">
-    <!-- محتوى الشريط الجانبي -->
-  </div>
+<div>
 
   <!-- Main Content -->
-  <div class="col-md-10 col-12 p-4">
+  <div class="col-md-10 col-12 p-4 w-100">
     <!-- عنوان وزر الإضافة -->
     <div class="d-flex justify-content-between align-items-center mb-3">
       <h3>All Amenities</h3>
