--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -16,10 +16,11 @@
   <h4 class="fw-bold text-center d-none d-md-block">Dashboard</h4>
 
   <!-- Navigation Links -->
-  <ul class="nav nav-pills flex-column mb-auto mt-4 gap-2 custom-sidebar">
+  <ul class="nav nav-pills flex-column mb-auto mt-4 gap-2 custom-sidebar" [ngClass]="isDarkMode ? 'text-white' : 'text-dark'">
     <li>
       <a class="nav-link d-flex align-items-center gap-2"
         routerLink="/home"
+        [ngClass]="isDarkMode ? 'text-white' : 'text-dark'"
         routerLinkActive="active">
         <i class="bi bi-house-door"></i> Home
       </a>
